--- a/de12/test.html
+++ b/de12/test.html
@@ -2,22 +2,42 @@
 <html lang="jp">
 <head>
     <!-- ⑥↓タイトルを変えてみよう -->
-    <title>〇〇のテストページ</title>
+    <title>るーさんのページ</title>
     <!-- ⑤スタイルシートの設定をしよう -->
+    <link rel="stylesheet" href="./css/style.css">
     <!-- h1.htmlからある行をコピペしてくればOK -->
 </head>
 <body>
-    <h1>見出し</h1>
+    <h1>見出し1</h1>
     <!-- 塊ごとにdivタグで区切るようにしましょう。 -->
     <div>
          <!-- ①↓に文字を書いてみよう -->
-
+    </div>るるるるるる<br>
+            12345<br>
+            🐜が１０
+        </div>
          <!-- ②↓に画像（imagesフォルダにあるtest.png）を挿入してみよう -->
-
+        画像を表示(30%)<br>
+         <img src="./images/testimage.png" width="30%"><br>
+        画像を表示(40%)<br>
+        <img src="./images/testimage.png" width="45%"><br>
+        <img src="../images/0_XBlogo.png " width="45%"><br>
          <!-- ③↓に箇条書きをしてみよう -->
-
+        <ol>
+            <li>ファンクラブ会費５０００</li>
+            <li>グッズ２２０００</li>
+        </ol>
+        <ul>
+            <li>あんスタ</LI>
+            <li>ジャニーズ×２</li>
+        </ul>
          <!-- ④↓に外部リンクを作ってみよう -->
-
+        　<a href="./index.html">デザイン演習Ⅰ・Ⅱトップページ</a><br>
+        　<a href="../index.html">XBPトップページ</a><br>
+        　<a href="https://www.yahoo.co.jp" target="_blank">yahoo</a><br>
+        　<a href="https://kulms.kanagawa-u.ac.jp/" target="_blank">ウェブクラス</a><br>
+        <div class="video">"<iframe width="560" height="315" src="https://www.youtube.com/embed/wmBGFWVMuSY?si=30cHfdxc8Bk9kZj1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>"</div>
+        　<a href="./files/test.pdf" target="_blank">pdfファイル</a>
     </div>
 
 </body>
