--- a/de12/index.html
+++ b/de12/index.html
@@ -20,6 +20,7 @@
         <h2>演習ノート一覧</h2>
          
         <li><a href="./1.html" target="_blank">第１回</a></li>
+        <li><a href="./syasin.html" target="_blank">写真</a></li>
     
 <br>
 <br>
