--- a/de12/syasin.html
+++ b/de12/syasin.html
@@ -26,6 +26,15 @@
                 衝撃の一枚でした。
             
             </p>
+            <h2>第二回</h2>
+
+            <h3>品川駅　パチンコ店 ハリウッド</h3>
+            <img src="./images/pro-yNRwNDNi.jpeg" width="45%"> <br>
+            <p>
+                この写真は品川駅を降りてすぐにあった看板です。<br>
+                おしゃれな見た目だったのでレストランかバーかなと思ったらまさかのパチンコ屋でした。<br>
+                川崎のパチンコとは違く、格式があるなと思いました。
+            </p>
 
 </body>
 </html>
