--- a/digi_fab/3dprin.html
+++ b/digi_fab/3dprin.html
@@ -15,37 +15,39 @@
         <h2>作品名：オタピンセット</h2>
 
             <h3>スケッチ・デザイン</h3>
-            <img src="./images/pro-0Ci5dgWL.jpeg" width="45%"> <br>
+            <img src="./images/pro-0Ci5dgWL.jpeg" width="35%"> <br>
             <p>
                 かわいいを詰め込んだデザインにしようとおもいました。
             
             </p>
 
-            <h2>作成した作品</h2>
-                <ima src="./images/pro-KvQI0sM4.jpeg" width="45%"><br>
-                <ima src="./images/pro-CiTIlRd5.jpeg" width="45%"><br>
+            <h3>作成した作品</h3>
+            <img src="./images/pro-KvQI0sM4.jpeg" width="35%"><br>
+            <img src="./images/pro-CiTIlRd5.jpeg" width="35%"><br>
             完成品のSTLファイルはこちら<br>
             <a href="./files/CE3S1PRO_e-su pinset v8.gcode">STLファイル</a><br>
-            <h2>作品の説明</h2>
+            <h3>作品の説明</h3>
             <p>
                 作品のメインテーマは<strong>「推しと量産型」</strong><br>
                 ピンセットの中に推しの文字を入れ、量産型のメインであるリボンをくっつけました。
+                
             </p>
-            <h2>この作品を作ろうとしたきっかけ</h2>
+            <h3>この作品を作ろうとしたきっかけ</h3>
             <p>
                 グッズの交換の梱包の時や、カードをかわいくデコレーションするときピンセットはよく使います。<br>
                 その時にピンセットも一緒に推し色でかわいくできたら最高だなと思って作りました。
             </p>
-            <h2>制作過程</h2>
-            実はこの完成品は四回目でやっと成功しました。
-            <ima src="./images/pro-VtWSEHl4.jpeg" width="45%"><br>
+            <h3>制作過程</h3>
+            実はこの完成品は四回目でやっと成功しました。<br>
+            <img src="./images/pro-VtWSEHl4.jpeg" width="35%"><br>
                 左から一回目、二回目、三回目に作った作品です。<br>
                 一回目のやつは見ての通りリボンが小さすぎました。二回目はリボンは成功しましたが、文字を入れるのを忘れました。<br>
                 三回目は文字を入れるのに成功しましたが、エースのスの斜めがうまくできなくてガタガタになってしまいました。<br>
-            <ima src="./images/pro-GizHdd94.jpeg" width="45%"><br>
+            <img src="./images/pro-GizHdd94.jpeg" width="35%"><br>
                 そして四回目できれいにできました。まず、リボンの真ん中を少し出すだけで立体感がうまれリボンぽくなった<br>
-            <ima src="./images/pro-wXHnwTqT.jpeg" width="45%"><br>    
-                また、スケッチ機能を使うことで斜めの線も作れると分かったため、このようなハートも作ることができました。
+            <img src="./images/pro-wXHnwTqT.jpeg" width="35%"><br>    
+                また、スケッチ機能を使うことで斜めの線も作れると分かったため、このようなハートも作ることができました。<br>
+                ハートはピンセット内のサイズなのでそのままピンセットにくっつけて、リボンはピンセットを超える大きさなので別々にプリントしたらうまくいきました。
 
 
 
