--- a/de12/index.html
+++ b/de12/index.html
@@ -21,6 +21,7 @@
          
         <li><a href="./1.html" target="_blank">第１回</a></li>
         <li><a href="./syasin.html" target="_blank">路上観察</a></li>
+        <li><a href="./files/dezain.ensyuu.pdf" target="_blank">データ分析</a></li>
     
 <br>
 <br>
