--- a/de12/syasin.html
+++ b/de12/syasin.html
@@ -36,5 +36,18 @@
                 川崎のパチンコとは違く、格式があるなと思いました。
             </p>
 
+            <h2>第三回</h2>
+
+            <h3>川崎駅東口　？？？</h3>
+            <img src="./images/pro-nXPvEoAO.jpeg" width="45%"> <br>
+            <p>
+                さあこのAIイラスト満点のこの写真。なんの看板でしょうか。<br>
+                答えはわかりません！！！看板したにあったジュエリー屋さん(めっちゃ高級そう)なところに聞いたところ<br>
+                うちの看板ではない。チネチッタ(川崎の少し有名な場所)の看板じゃない？と親切に教えてくれました。<br>
+                まじでなんの看板かわかりません。川崎こわいです。
+            </p>
+
+
+
 </body>
 </html>
