--- a/digi_fab/index.html
+++ b/digi_fab/index.html
@@ -13,7 +13,7 @@
     <h1>デジタルファブリケーション</h1>
     <h2>演習ノート一覧</h2>
     <li><a href="./3dprin.html" target="_blank">ピンセット</a></li>
-
+    <li><a href="./re-za.html" target="_blank">レーザカット</a></li>
 
 
     
