--- a/digi_fab/re-za.html
+++ b/digi_fab/re-za.html
@@ -15,7 +15,8 @@
         <h2>作品名：人間失格</h2>
 
             <h3>スケッチ・デザイン</h3>
-            <img src="./images/pro-0Ci5dgWL.jpeg" width="35%"> <br>
+            <img src="./images/pro-hcvI0PVz.jpeg" width="35%"> <br>
+            <img src="./images/pro-Vd7ekfTj.jpeg" width="35%"> <br>
             <p>
                 まずは自分の心が動かすものを選んでみました。<br>
                 そこで好きなものと芸術を組み合わせて文豪にちなんだやつを作ろうとしました。<br>
@@ -27,10 +28,10 @@
             </p>
 
             <h3>作成した作品</h3>
-            <img src="./images/pro-KvQI0sM4.jpeg" width="35%"><br>
-            <img src="./images/pro-CiTIlRd5.jpeg" width="35%"><br>
-            完成品のSTLファイルはこちら<br>
-            <a href="./files/CE3S1PRO_e-su pinset v8.gcode">STLファイル</a><br>
+            <img src="./images/pro-kk2BCvHB.jpeg" width="35%"><br>
+            完成品のファイルはこちら<br>
+            <a href="./files/ningen v1.svg">svgファイル</a><br>
+            <a href="./files/ningen v1.ai">aiファイル</a><br>
             <h3>作品の説明</h3>
             <p>
                 作品のメインテーマは<strong>「２D小説」</strong><br>
@@ -52,11 +53,17 @@
                 まず、私が普段イラストを描くように使っている「アイビスペイント」というアプリで簡単に原稿用紙を描いたあと、フュージョンに移しました。<br>
                <img src="./images/ningen.png" width="35%"><br>
                これがアイビスペイントで描いたイラストです。<br>
-                しかし、フュージョンに移したのはいいものの、ここからどうすればいいのかわからず、上からなぞりました。
+                しかし、フュージョンに移したのはいいものの、ここからどうすればいいのかわからず、上からなぞりました。<br>
+                でもフュージョンでも限界が来たのでさらにInkscapeをインストールしてｓｖｇファイルを作りました。<br>
+                フュージョンが一番簡単でイラストレーターとInkscapeは似ていて、どちらも難しかったです。しかしInkscapeになれるとイラストレーターが楽になると個人的に思ったので、<br>
+                家で作業するならInkscape、学校ではイラストレーターが良いとおもいました。
+                
 
 
             </p>
+            <h3>感想</h3>
 
+            木がめちゃくちゃいい匂いで幸せでした。匂いも良し！デザインも良し！とてもいいものができたとおもいます。
 
 
 
