--- a/digi_fab/re-za.html
+++ b/digi_fab/re-za.html
@@ -55,6 +55,8 @@
                これがアイビスペイントで描いたイラストです。<br>
                 しかし、フュージョンに移したのはいいものの、ここからどうすればいいのかわからず、上からなぞりました。<br>
                 でもフュージョンでも限界が来たのでさらにInkscapeをインストールしてｓｖｇファイルを作りました。<br>
+                <img src="./images/sukusyo.png" width="35%"><br>
+                これがInkscapeです。本当にイラストレーターに似ています。
                 フュージョンが一番簡単でイラストレーターとInkscapeは似ていて、どちらも難しかったです。しかしInkscapeになれるとイラストレーターが楽になると個人的に思ったので、<br>
                 家で作業するならInkscape、学校ではイラストレーターが良いとおもいました。
                 
