--- a/digi_fab/re-za.html
+++ b/digi_fab/re-za.html
@@ -2,7 +2,7 @@
 <html lang="jp">
 <head>
     <!-- ⑥↓タイトルを変えてみよう -->
-    <title>るーさんのピンセット</title>
+    <title>レーザカット</title>
     <!-- ⑤スタイルシートの設定をしよう -->
     <link rel="stylesheet" href="./css/oruru.css">
     <!-- h1.htmlからある行をコピペしてくればOK -->
