--- a/digi_fab/re-za.html
+++ b/digi_fab/re-za.html
@@ -14,6 +14,12 @@
          <!-- ①↓に文字を書いてみよう -->
         <h2>作品名：人間失格</h2>
 
+        <img src="./images/pro-Ukrnd1sz.jpeg" width="35%"><br>
+        　
+        　
+        　
+
+
             <h3>スケッチ・デザイン</h3>
             <img src="./images/pro-hcvI0PVz.jpeg" width="35%"> <br>
             <img src="./images/pro-Vd7ekfTj.jpeg" width="35%"> <br>
@@ -65,7 +71,9 @@
             </p>
             <h3>感想</h3>
 
-            木がめちゃくちゃいい匂いで幸せでした。匂いも良し！デザインも良し！とてもいいものができたとおもいます。
+            木がめちゃくちゃいい匂いで幸せでした。匂いも良し！デザインも良し！とてもいいものができたとおもいます。<br>
+            しかもこれを日本文化学科の友達に見せたらみんな感動してくれました。中には買い取りたいという子もいました。<br>
+            ちゃんと人の心を動かせる作品を作れてよかったです。経営学部でよかった。
 
 
 
