--- a/digi_fab/index.html
+++ b/digi_fab/index.html
@@ -14,7 +14,7 @@
     <h2>演習ノート一覧</h2>
     <li><a href="./3dprin.html" target="_blank">ピンセット</a></li>
     <li><a href="./re-za.html" target="_blank">レーザカット</a></li>
-
+    <li><a href="./ingen.html" target="_blank">観察</a></li>
 
     
 <br>
