--- a/de12/index.html
+++ b/de12/index.html
@@ -23,6 +23,7 @@
         <li><a href="./syasin.html" target="_blank">路上観察</a></li>
         <li><a href="./files/dezain.ensyuu.pdf" target="_blank">データ分析</a></li>
         <li><a href="./py.html" target="_blank">パイソンゲーム</a></li>
+        <li><a href="./music.html" target="_blank">可能性のほにゃらら</a></li>
     
 <br>
 <br>
