--- a/de12/index.html
+++ b/de12/index.html
@@ -24,6 +24,7 @@
         <li><a href="./files/dezain.ensyuu.pdf" target="_blank">データ分析</a></li>
         <li><a href="./py.html" target="_blank">パイソンゲーム</a></li>
         <li><a href="./music.html" target="_blank">可能性のほにゃらら</a></li>
+        <li><a href="./oosaka.html" target="_blank">共起ネットワーク</a></li>
     
 <br>
 <br>
