--- a/digi_fab/index.html
+++ b/digi_fab/index.html
@@ -15,6 +15,7 @@
     <li><a href="./3dprin.html" target="_blank">ピンセット</a></li>
     <li><a href="./re-za.html" target="_blank">レーザカット</a></li>
     <li><a href="./ingen.html" target="_blank">観察</a></li>
+    <li><a href="./1-5.html" target="_blank">Design for Others</a></li>
 
     
 <br>
