--- a/de12/index.html
+++ b/de12/index.html
@@ -26,6 +26,7 @@
         <li><a href="./music.html" target="_blank">可能性のほにゃらら</a></li>
         <li><a href="./oosaka.html" target="_blank">共起ネットワーク</a></li>
         <li><a href="./aaa.html" target="_blank"></a>インタビュー</li>
+        <li><a href="./inntabyu.html" target="_blank"></a>インタビュー共起ネットワーク</li>
     
 <br>
 <br>
