--- a/de12/index.html
+++ b/de12/index.html
@@ -25,8 +25,8 @@
         <li><a href="./py.html" target="_blank">パイソンゲーム</a></li>
         <li><a href="./music.html" target="_blank">可能性のほにゃらら</a></li>
         <li><a href="./oosaka.html" target="_blank">共起ネットワーク</a></li>
-        <li><a href="./aaa.html" target="_blank"></a>インタビュー</li>
-        <li><a href="./inntabyu.html" target="_blank"></a>インタビュー共起ネットワーク</li>
+        <li><a href="./aaa.html" target="_blank">インタビュー</a></li>
+        <li><a href="./inntabyu.html" target="_blank">インタビュー共起ネットワーク</a></li>
     
 <br>
 <br>
