--- a/digi_fab/index.html
+++ b/digi_fab/index.html
@@ -16,7 +16,7 @@
     <li><a href="./re-za.html" target="_blank">レーザカット</a></li>
     <li><a href="./ingen.html" target="_blank">観察</a></li>
     <li><a href="./1-5.html" target="_blank">Design for Others</a></li>
-
+    <li><a href="./saisyuu.html" target="_blank">最終課題</a></li>
     
 <br>
 <br>
