--- a/de12/index.html
+++ b/de12/index.html
@@ -27,7 +27,7 @@
         <li><a href="./oosaka.html" target="_blank">共起ネットワーク</a></li>
         <li><a href="./aaa.html" target="_blank">インタビュー</a></li>
         <li><a href="./inntabyu.html" target="_blank">インタビュー共起ネットワーク</a></li>
-    
+        <li><a href="https://mold647.github.io/xbp/de12/files/NOSH.pdf" target="_blank">USP</a></li>
 <br>
 <br>
 
