--- a/de34/index.html
+++ b/de34/index.html
@@ -10,25 +10,11 @@
     <logotohome>
     <a href="../index.html"><img src="./images/0_XBlogo.png" alt=""></a>
     </logotohome>
-    <h1>デザイン演習Ⅰ・Ⅱ</h1>
-        <h2>HTMLに関すること</h2>
-        <ol>
-            <li><a href="./hp1.html" target="_blank">htmlの基礎知識</a></li>
-            <li><a href="./hp2.html" target="_blank">htmlのwork</a></li>
-            <li><a href="./test.html" target="_blank">テストページ</a></li>
-        </ol>
+    <h1>デザイン演習Ⅲ・Ⅳ</h1>
+        
         <h2>演習ノート一覧</h2>
          
-        <li><a href="./1.html" target="_blank">第１回</a></li>
-        <li><a href="./syasin.html" target="_blank">路上観察</a></li>
-        <li><a href="./files/dezain.ensyuu.pdf" target="_blank">データ分析</a></li>
-        <li><a href="./py.html" target="_blank">パイソンゲーム</a></li>
-        <li><a href="./music.html" target="_blank">可能性のほにゃらら</a></li>
-        <li><a href="./oosaka.html" target="_blank">共起ネットワーク</a></li>
-        <li><a href="./aaa.html" target="_blank">インタビュー</a></li>
-        <li><a href="./inntabyu.html" target="_blank">インタビュー共起ネットワーク</a></li>
-        <li><a href="https://mold647.github.io/xbp/de12/files/NOSH.pdf" target="_blank">USP</a></li>
-<br>
+ 
 <br>
 
 
