--- a/de34/index.html
+++ b/de34/index.html
@@ -13,7 +13,7 @@
     <h1>デザイン演習Ⅲ・Ⅳ</h1>
         
         <h2>演習ノート一覧</h2>
-         
+        <li><a href="./ltika.html" target="_blank">プログラムでモノを動かす</a></li>
  
 <br>
 
