--- a/de34/index.html
+++ b/de34/index.html
@@ -14,6 +14,7 @@
         
         <h2>演習ノート一覧</h2>
         <li><a href="./ltika.html" target="_blank">プログラムでモノを動かす</a></li>
+        <li><a href="./QR.html" target="_blank">lotを体験</a></li>
  
 <br>
 
