--- a/de34/index.html
+++ b/de34/index.html
@@ -15,6 +15,7 @@
         <h2>演習ノート一覧</h2>
         <li><a href="./ltika.html" target="_blank">プログラムでモノを動かす</a></li>
         <li><a href="./QR.html" target="_blank">lotを体験</a></li>
+        <li><a href="./lot3.html" target="_blank">IoTによるデータ保存</a></li>
  
 <br>
 
