--- a/de34/index.html
+++ b/de34/index.html
@@ -16,7 +16,7 @@
         <li><a href="./ltika.html" target="_blank">プログラムでモノを動かす</a></li>
         <li><a href="./QR.html" target="_blank">lotを体験</a></li>
         <li><a href="./lot3.html" target="_blank">IoTによるデータ保存</a></li>
- 
+        <li><a href="./paripi.html" target="_blank">光、動きを操る</a></li>
 <br>
 
 
