--- a/de34/index.html
+++ b/de34/index.html
@@ -18,6 +18,7 @@
         <li><a href="./lot3.html" target="_blank">IoTによるデータ保存</a></li>
         <li><a href="./paripi.html" target="_blank">光、動きを操る</a></li>
         <li><a href="./gurahu.html" target="_blank">コレスポンデンス分析</a></li>
+         <li><a href="./ahiru.html" target="_blank">プロジェクトノート</a></li>
 <br>
 
 
