--- a/de34/ahiru.html
+++ b/de34/ahiru.html
@@ -45,10 +45,15 @@
                 ●　光と音のプログラミング作成<br>
                 　→音のプログラミング（アヒルの鳴き声）　かいくん制作<br>
 
-                更新日6月26日<br>
+                更新日5月26日<br>
 
                 ●　ネオピクセル借りる<br>
+                    →ネオピクセル借りた<br>
                 ●　ネオピクセルのプログラミング作成<br>
+                    →ネオピクセルとLOTを繋げるプログラミング完成<br>
+
+               更新日6月8日<br>
+
                
 
 
