--- a/de34/ahiru.html
+++ b/de34/ahiru.html
@@ -54,7 +54,17 @@
 
                更新日6月8日<br>
 
-               
+                全体的に考えること<br>
+                ■　アヒルのコンセプトを決める<br>
+
+                光・音チーム<br>
+
+                ■　磁石センサーを使ってゴールの演出をする<br>
+
+                ●　磁石センサーを買う<br>
+                ●　家から磁石をもってくる<br>
+
+               　更新日6月9日<br> 
 
 
 
