--- a/de34/ahiru.html
+++ b/de34/ahiru.html
@@ -35,7 +35,7 @@
 
 
 
-                ■　音の素材を何にするか<br>
+             <p>■　音の素材を何にするか<br>
                 ■　光の素材を何にするか<br>
              
                 ●　素材の購入<br>
@@ -43,28 +43,51 @@
                 　→スピーカーの購入
                 ●　背景班との光の調整<br>
                 ●　光と音のプログラミング作成<br>
-                　→音のプログラミング（アヒルの鳴き声）　かいくん制作<br>
+                　→音のプログラミング（アヒルの鳴き声）　かいくん制作<br></p>
 
                 更新日5月26日<br>
 
-                ●　ネオピクセル借りる<br>
+                <p>●　ネオピクセル借りる<br>
                     →ネオピクセル借りた<br>
                 ●　ネオピクセルのプログラミング作成<br>
-                    →ネオピクセルとLOTを繋げるプログラミング完成<br>
+                    →ネオピクセルとLOTを繋げるプログラミング完成<br></p>
 
-               更新日6月8日<br>
+               更新日6月2日<br>
 
-                全体的に考えること<br>
+               <p>全体的に考えること<br>
                 ■　アヒルのコンセプトを決める<br>
 
                 光・音チーム<br>
 
+                →センサーをゴール付近に使うことを決めた。<br>
+                →背景のメリーゴーランド用のライトの起動確認。スイッチポチタイプ<br>
+                <p>　※　メリーゴーランド＝スイッチライト<br>
+                　　　建物の中　　　　＝先生から借りたネオピクセル<br>
+                　　　アヒル　　　　　＝光らせるのは難しいという方向に話がすすんでる</p>
+
                 ■　磁石センサーを使ってゴールの演出をする<br>
+                ■ゴール付近にセンサーをどうやって付けるなどを考える<br>
 
                 ●　磁石センサーを買う<br>
                 ●　家から磁石をもってくる<br>
 
+                ■町のｂｇｍを決める<br></p>
+
                　更新日6月9日<br> 
+
+                →コンセプト決め（途中）<br>
+                <br>
+                →磁力センサーの動作のプログラミング作成<br>
+                <br>
+                →音の切り替えプログラミング作成<br>
+
+                ■タイムトラベルをどうやって表現するか<br>
+                ●ゴール前の磁力センサーを入れる箱を作る<br>
+                ●みんなの班と進捗状況の確認<br>
+
+                　更新日6月22日<br>
+
+
 
 
 
