--- a/de34/ahiru.html
+++ b/de34/ahiru.html
@@ -87,7 +87,19 @@
 
                 　更新日6月22日<br>
 
+                →コンセプト決め<br>
+                　世界一のアヒルとはなんなのかをみんなで会話<br>
+                →私たちのYouTubeの名前を決めた<br>
+                →磁力センサーを付ける家？を作成<br>
+                →上のやつを背景チームと会話<br>
 
+                <br>
+
+                ■アヒルのコンセプトを具体的に決定する<br>
+                ■光・音チームで今後なにするか話す<br>
+                　花火を実際やるかどうか<br>
+                
+                　更新日6月27日<br>
 
 
 
