--- a/de34/ahiru.html
+++ b/de34/ahiru.html
@@ -144,6 +144,7 @@
                 ーーーーーーーーーーーーーーーーーーーーーーーーーーーーーーー<br>
                 <br>
                
+                <div class="video">"<iframe width="560" height="315" src="https://www.youtube.com/embed/I_8ni_70mPE?si=mkPvJOKUpfbyapPq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>"</div>
                 
 
 </body>
