--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
         <ol>
             <li><a href="./de12/index.html">デザイン演習Ⅰ・Ⅱ</a></li>
             <li><a href="./de34/index.html">デザイン演習Ⅲ・Ⅳ</a></li>
+            <li><a href="./de56/index.html">デザイン演習Ⅴ</a></li>
             <li><a href="./digi_fab/index.html">デジタルファブリケーション</a></li>
         </ol>
 
-            
+           
         <br>
         <br>
 
