--- a/de56/index.html
+++ b/de56/index.html
@@ -13,7 +13,8 @@
     <h1>デザイン演習Ⅴ・Ⅵ</h1>
         
         <h2>演習ノート一覧</h2>
-        
+
+        <li><a href="./0.html" target="_blank">世の中に存在する課題</a></li>
 <br>
 
 
